# roadside-guardian

./: README.md  connect_zenoh.sh  launch_autoware.sh  launch_v2x.sh  setup-ros-env-rsu.sh  v2x_dependencies.repos
scripts/: launch_lidar_detection.sh  launch_vlp16.sh  launch_vlp32.sh
src/rsu_autoware_launcher/autoware_launch_rsu/: CMakeLists.txt  package.xml  rosbag_monitor.rviz  rsu_planning.rviz  rsu_planning2.rviz
src/rsu_autoware_launcher/autoware_launch_rsu/config/planning/scenario_planning/lane_driving/behavior_planning/behavior_velocity_planner/: intersection.param.yaml
src/rsu_autoware_launcher/autoware_launch_rsu/launch/: autoware.launch.xml  autoware.launch_old.xml
src/rsu_autoware_launcher/autoware_launch_rsu/launch/components/: tier4_planning_component.launch.xml  tier4_planning_component.launch_old.xml
src/rsu_autoware_launcher/autoware_launch_rsu/sensor_kit/sample_sensor_kit_launch/common_sensor_launch/: CMakeLists.txt  package.xml
src/rsu_autoware_launcher/autoware_launch_rsu/sensor_kit/sample_sensor_kit_launch/common_sensor_launch/launch/: velodyne_VLP32.launch.xml
src/rsu_autoware_launcher/autoware_launch_rsu/sensor_kit/sample_sensor_kit_launch/sample_sensor_kit_description_rsu/: CMakeLists.txt  package.xml
src/rsu_autoware_launcher/autoware_launch_rsu/sensor_kit/sample_sensor_kit_launch/sample_sensor_kit_launch_rsu/: CMakeLists.txt  package.xml
src/rsu_autoware_launcher/autoware_launch_rsu/sensor_kit/sample_sensor_kit_launch/sample_sensor_kit_launch_rsu/launch/: lidar.launch.xml  sensing.launch.xml
src/rsu_autoware_launcher/tier4_planning_launch_rsu/: CMakeLists.txt  package.xml
src/rsu_autoware_launcher/tier4_planning_launch_rsu/launch/: planning.launch_old.xml
src/rsu_autoware_launcher/v2x_state_rviz_plugin/: CMakeLists.txt  package.xml
src/rsu_autoware_launcher/v2x_state_rviz_plugin/plugins/: plugin_description.xml
src/rsu_autoware_launcher/v2x_state_rviz_plugin/src/: autoware_state_panel.cpp  custom_icon_label.cpp  topic_monitor_panel.cpp  velocity_steering_factors_panel.cpp
src/rsu_autoware_launcher/v2x_state_rviz_plugin/src/include/: autoware_state_panel.hpp  topic_monitor_panel.hpp  velocity_steering_factors_panel.hpp
src/v2x/rsu/detection/bbox2marker/: package.xml  setup.cfg  setup.py
src/v2x/rsu/detection/bbox2marker/bbox2marker/: detection3d_to_marker.py
src/v2x/rsu/rsu_autoware_bridge/: CMakeLists.txt  package.xml
src/v2x/rsu/rsu_autoware_bridge/include/rsu_autoware_bridge/: rsu_bridge_node.hpp  vehicle_bridge_node.hpp  vehicle_trajectory_arbiter_node.hpp
src/v2x/rsu/rsu_autoware_bridge/src/: rsu_bridge_node.cpp  vehicle_bridge_node.cpp  vehicle_trajectory_arbiter_node.cpp
src/v2x/vehicle/sensor_publish_selector/: CMakeLists.txt  package.xml
src/v2x/vehicle/sensor_publish_selector/src/: camera_selector_node.cpp  lidar_selector_node.cpp
src/v2x/vehicle/sensor_spoofing_trigger/: CMakeLists.txt  package.xml
src/v2x/vehicle/sensor_spoofing_trigger/src/: spoofing_trigger_node.cpp
src/v2x/vehicle/v2x_latency_monitor/: CMakeLists.txt  package.xml
src/v2x/vehicle/v2x_latency_monitor/src/: latency_monitor_node.cpp
src/vehicle_autoware_launcher/autoware_launch_v2x/: CMakeLists.txt  package.xml
src/vehicle_autoware_launcher/autoware_launch_v2x/config/planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/avoidance/: avoidance.param.yaml
src/vehicle_autoware_launcher/autoware_launch_v2x/launch/: autoware.launch.xml  planning_simulator.launch.xml
src/vehicle_autoware_launcher/autoware_launch_v2x/launch/components/: tier4_perception_component.launch.xml  tier4_planning_component.launch.xml
src/vehicle_autoware_launcher/autoware_launch_v2x/rviz/: rsu.rviz
src/vehicle_autoware_launcher/planning_validator_v2x/: CMakeLists.txt  package.xml
src/vehicle_autoware_launcher/planning_validator_v2x/launch/: planning_validator.launch.xml
src/vehicle_autoware_launcher/tier4_auto_traffic_light_rviz_plugin/: CMakeLists.txt  package.xml
src/vehicle_autoware_launcher/tier4_auto_traffic_light_rviz_plugin/src/: traffic_light_publish_panel.cpp  traffic_light_publish_panel.hpp
src/vehicle_autoware_launcher/tier4_perception_launch_v2x/: CMakeLists.txt  package.xml
src/vehicle_autoware_launcher/tier4_perception_launch_v2x/launch/: perception.launch.xml
src/vehicle_autoware_launcher/tier4_perception_launch_v2x/launch/traffic_light_recognition/: traffic_light.launch.xml
src/vehicle_autoware_launcher/tier4_planning_launch_v2x/: CMakeLists.txt  package.xml
src/vehicle_autoware_launcher/tier4_planning_launch_v2x/launch/: planning.launch.xml
zenoh/: rsu.yaml  setup-zenoh.sh  vehicle.yaml
