<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tier4_planning_launch_v2x</name>
  <version>0.1.0</version>
  <description>The tier4_planning_launch package</description>
  <!-- behavior path planner -->
  <!-- lane change module -->
  <author email="zulfaqar.azmi@tier4.jp">Zulfaqar Azmi</author>
  <!-- pull over module -->
  <author email="kosuke.takeuchi@tier4.jp">Kosuke Takeuchi</author>
  <!-- pull out module -->
  <author email="kosuke.takeuchi@tier4.jp">Kosuke Takeuchi</author>
  <!-- side shift module -->
  <author email="fumiya.watanabe@tier4.jp">Fumiya Watanabe</author>
  <!-- avoidance module -->
  <author email="takamasa.horibe@tier4.jp">Takamasa Horibe</author>
  <author email="satoshi.ota@tier4.jp">Satoshi Ota</author>
  <!-- turn signal decider -->
  <author email="yutaka.shimizu@tier4.jp">Yutaka Shimizu</author>
  <!-- drivable area generation-->
  <author email="takayuki.murooka@tier4.jp">Takayuki Murooka</author>

  <!-- behavior velocity planner -->
  <!-- intersection module -->
  <author email="mamoru.sobue@tier4.jp">Mamoru Sobue</author>
  <!-- crosswalk module -->
  <author email="satoshi.ota@tier4.jp">Satoshi Ota</author>
  <!-- detection area module -->
  <author email="kyoichi.sugahara@tier4.jp">Kyoichi Sugahara</author>
  <!-- occlusion spot module -->
  <author email="taiki.tanaka@tier4.jp">Taiki Tanaka</author>
  <!-- no stopping area module -->
  <author email="kosuke.takeuchi@tier4.jp">Kosuke Takeuchi</author>
  <!-- traffic light module -->
  <author email="satoshi.ota@tier4.jp">Satoshi Ota</author>
  <!-- blind spot module -->
  <author email="mamoru.sobue@tier4.jp">Mamoru Sobue</author>
  <!-- stop line module -->
  <author email="yutaka.shimizu@tier4.jp">Yutaka Shimizu</author>
  <!-- virtual traffic light module -->
  <author email="kosuke.takeuchi@tier4.jp">Kosuke Takeuchi</author>
  <!-- run out module -->
  <author email="tomohito.ando@tier4.jp">Tomohito Ando</author>
  <author email="makoto.kurihara@tier4.jp">Makoto Kurihara</author>

  <!-- maintainer -->
  <author email="taiki.tanaka@tier4.jp">Taiki Tanaka</author>
  <author email="tomoya.kimura@tier4.jp">Tomoya Kimura</author>
  <author email="shumpei.wakabayashi@tier4.jp">Shumpei Wakabayashi</author>

  <!-- Modified for RSU/V2X configuration -->
  <maintainer email="sakunaka.iasl@gmail.com">saku</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <exec_depend>behavior_path_planner</exec_depend>
  <exec_depend>behavior_velocity_planner</exec_depend>
  <exec_depend>costmap_generator</exec_depend>
  <exec_depend>external_cmd_selector</exec_depend>
  <exec_depend>external_velocity_limit_selector</exec_depend>
  <exec_depend>freespace_planner</exec_depend>
  <exec_depend>mission_planner</exec_depend>
  <exec_depend>motion_velocity_smoother</exec_depend>
  <exec_depend>obstacle_avoidance_planner</exec_depend>
  <exec_depend>obstacle_cruise_planner</exec_depend>
  <exec_depend>obstacle_stop_planner</exec_depend>
  <exec_depend>planning_validator</exec_depend>
  <exec_depend>rtc_auto_mode_manager</exec_depend>
  <exec_depend>scenario_selector</exec_depend>
  <exec_depend>surround_obstacle_checker</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
